testament/tests/shouldfail/tnimout.nim
discard """
nimout: "Hello World!"
action: compile
target: c
"""

static:
  echo "something else"
